--- a/denote-explore.texi
+++ b/denote-explore.texi
@@ -454,7 +454,7 @@ The importance of a note is directly related to the number of backlinks. The @co
 
 This package is available through MELPA@.
 
-The configuration below customises all available variables and binds all available commands to the @samp{C-c e} prefix. This example also includes all configurable variables. To get started you don't need to configure anything. You should modify this configuration to suit your needs, as one person's sensible defaults are another person's nightmare.
+The configuration below customises all available variables and binds all available commands to the @samp{C-c e} prefix. To get started you don't need to configure anything. You should modify this configuration to suit your needs, as one person's sensible defaults are another person's nightmare.
 
 @lisp
 (use-package denote-explore
