Added impact of denote-excluded-files-regexp variable to the manual
Issue 30

--- a/denote-explore.org
+++ b/denote-explore.org
@@ -31,6 +31,8 @@ These functions are informative, but a graph says more than a thousand numbers. 
 2. ~denote-explore-barchart-keywords~: Visualise the top-n keywords
 3. ~denote-explore-barchart-timeline~: Visualise notes created by year
 
+The ~denote-excluded-files-regexp~ variable can contain a regular expression of files that are excluded from these statistical functions. 
+
 * Random Walks
 Creativity springs from a medley of experiences, emotions, subconscious musings, and connecting random ideas. Introducing random elements into the creative process generates avenues of thought you might not have travelled otherwise. Random walks through your notes can be beneficial when you're stuck in a rut or just like to walk through your files randomly.
 
@@ -43,7 +45,7 @@ The Denote-Explorer package provides three commands to inject some randomness in
 3. ~denote-explore-random-link~: Jump to a random linked note (either forward or backward) or attachments (forward only).
 4. ~denote-explore-random-keyword~: Jump to a random Denote file with the same selected keyword(s). 
 
-The default state is that these functions jump to any Denote text file (plain text, Markdown or Org-mode). Prefixing the universal argument (=C-u=) includes attachments in the sample for a random jump, otherwise the walk remains within the collection of notes.
+The default state is that these functions jump to any Denote text file (plain text, Markdown or Org-mode). Prefixing the universal argument (=C-u=) includes attachments in the sample for a random jump, otherwise the walk remains within the collection of notes. The ~denote-excluded-files-regexp~ variable can contain a regular expression of files excluded from the sample of files to jump to.
 
 Jumping to a note that matches a regular expression lets you find random notes matching a search string. For example, to find a note you wrote in May 2022, use =^202205= and using =202305.*_journal= jumps to a random journal entry in May 2023.
 
@@ -69,6 +71,8 @@ Additionally, the ~denote-explore-identify-duplicate-notes-dired~ command displa
 
 With the universal argument (=C-u=), these commands looks for duplicated filenames without extensions instead of identifiers. This option ignores any duplicated identifiers created when exporting Denote Org mode files.
 
+The ~denote-excluded-files-regexp~ variable can contain a regular expression of files that are excluded from duplicate detection.  When using the archive functionality for Denote files you might set this variable to ="^.+\.org_archive"= so they are not marked as duplicates.
+
 Be careful when changing the identifier of a Denote file, as it can destroy the integrity of your links. Please ensure that the file you rename does not have any links pointing to it. You can use the ~denote-find-link~ and ~denote-find-backlink~ commands to check a file for links, or use the Denote Explorer link checker.
 
 ** Missing Links
@@ -80,6 +84,8 @@ The link contains an Elisp function and Emacs will ask for confirmation every ti
 
 When no link is found a message pops up in the echo area.
 
+The ~denote-excluded-files-regexp~ variable can contain a regular expression of files that are excluded from the search for missing links.
+
 ** Managing Keywords
 Denote keywords connect notes with similar content. Keywords should not exist in solitude because a category with only one member is not informative. Single keywords can arise because topics need to be fully developed or due to a typo.
 
@@ -89,10 +95,14 @@ You can also find notes or attachments without keywords with the ~denote-explore
 
 You can rename or remove keywords with ~denote-explore-rename-keyword~. Select one or more existing keywords from the completion list and enter the new keyword. This function renames all chosen keywords or removes the original keyword from all existing notes when you enter an empty string as new keyword. This function cycles through all notes and attachments containing one or more selected keywords and asks for confirmation before making any changes. The new keyword list is stored alphabetically. This function uses the front matter as the source of truth for notes and the file name for attachments.
 
+The ~denote-excluded-files-regexp~ variable can contain a regular expression of files that are excluded from the purview of these functions.
+
 ** Synchronising Meta Data
 Denote stores the metadata for each note in the filename using its ingenious format. Some of this metadata is copied to the front matter of a note, which can lead to discrepancies between the two metadata sources.
 
 The ~denote-explore-sync-metadata~ function checks all notes and asks the user to rename any file where the front matter data differs from the file name. The front matter data is the source of truth for the title and keywords. This function also enforces the alphabetisation of keywords, which assists with finding notes.
+
+The ~denote-excluded-files-regexp~ variable can contain a regular expression of files that are excluded from this synchronisation.
 
 * Knowledge Graphs
 Emacs is a text processor with limited graphical capabilities. However, committing your ideas to text requires a linear way of thinking since you can only process one word at a time. Visual thinking through tools such as mind maps or network diagrams is another way to approach your ideas. One of the most common methods to visualise interlinked documents is in a network or a personal knowledge graph, or in more general terms, a network diagram.
@@ -124,7 +134,7 @@ You create a network with the ~denote-explore-network~ command. This command wil
 
 The ~denote-explore-network-regenerate~ command recreates the previous graph with the same parameters, which is useful when changing the structure of your notes and you like to see the result visualised without having to re-enter the parameters.
 
-Using the universal argument =C-u= before issuing these two command (re)generates a network excluding attachments.
+Using the universal argument =C-u= before issuing these two command (re)generates a network excluding attachments. The ~denote-excluded-files-regexp~ variable can contain a regular expression of files that are excluded from visualisation.
 
 ** Community of Notes
 A community graph displays all notes matching a regular expression and their connections. The example below indicates the community that contains the =_emacs= regular expression, within the dashed line. The algorithm prunes any links to non-matching notes, which in the example below is the note with the =_vim= keyword.
@@ -360,7 +370,9 @@ You can use the most recent development version directly from GitHub (Emacs 29.1
 * Acknowledgements
 This code would only have existed with the help of Protesilaos Stavrou, developer of Denote.
 
-In addition, Jakub Szczerbowski, Samuel W. Flint, Ad (skissue), Vedang Manerikar, Jousimies, and Alexis Praga made significant contributions and suggestions. Noor Us Sabah on Fiverr wrote the first version of the D3.JS template file. All enhancements were generated with the assistance of ChatGPT.
+In addition, Jakub Szczerbowski, Samuel W. Flint, Ad (skissue), Vedang Manerikar, Jousimies, Alexis Praga, and Dav1d23 made significant contributions and suggestions.
+
+Noor Us Sabah on Fiverr wrote the first version of the D3.JS template file. All enhancements were generated with the assistance of ChatGPT.
 
 Feel free to raise an issue here on GitHub if you have any questions or find bugs or suggestions for enhanced functionality.
 
